--- a/templates/cart_total.mustache
+++ b/templates/cart_total.mustache
@@ -3,14 +3,16 @@
 <!-- block_shop_total/cart_total -->
 <a name="total"></a>
 
-<div id="shop-ordertotals">
-    {{{ordertotals}}}
-</div>
-
 <h3>{{#str}}order, block_shop_total{{/str}}</h3>
 
 <div id="order-detail">
     {{{orderdetail}}}
+</div>
+
+<h3>{{#str}}ordertotal, block_shop_total{{/str}}</h3>
+
+<div id="shop-ordertotals">
+    {{{ordertotals}}}
 </div>
 
 {{#isshopview}}
